flicker fix

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -247,12 +246,13 @@
 
 .toggle {
     display: flex;
-    position: relative;
+    position: fixed;
     display: inline-block;
     justify-items: center;
     align-items: center;
     width: 60px;
     height: 34px;
+    margin-left: 190px;
     flex-shrink: 0;
     
     background-color: var(--clr-light);
